--- a/src/components/profil/moreInfo/moreInfo.css
+++ b/src/components/profil/moreInfo/moreInfo.css
@@ -18,23 +18,18 @@
     background-color: white;
 
     animation-name: load-content;
-    animation-duration: 2s;
+    animation-duration: 400ms;
     animation-fill-mode: forwards; 
     overflow: hidden;
   }
-
-  .loading_content--hidden{
-    opacity:0;
-    visibility:hidden;
-  }
   
-   .load {
+  .loading {
     border: 7px solid #ff6060;
     border-top: 7px solid white;
     border-radius: 50%;
     width: 20px;
     height: 20px;
-    animation: loading 1s ;
+    animation: loading 400ms ;
     animation-iteration-count: infinite;
   }
   
