--- a/src/components/profil/moreInfo/moreInfo.css
+++ b/src/components/profil/moreInfo/moreInfo.css
@@ -18,7 +18,7 @@
     background-color: white;
 
     animation-name: load-content;
-    animation-duration: 1s;
+    animation-duration: 5s;
     animation-fill-mode: forwards; 
     overflow: hidden;
     
@@ -30,7 +30,7 @@
     border-radius: 50%;
     width: 20px;
     height: 20px;
-    animation: loading 400ms ;
+    animation: loading 5s ;
     animation-iteration-count: infinite;
   }
 
