--- a/src/components/home/banner/homeBanner.css
+++ b/src/components/home/banner/homeBanner.css
@@ -20,4 +20,20 @@
     color: white;
     font-size: 50px;
     transform:translate(-50%,-50%);
+    
+    animation-name: text_load_content;
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
 }
+
+@keyframes text_load_content {
+    0% {
+   opacity:0;
+   transform:translate(-50%,0%);
+    }
+ 
+    100% {
+     opacity:1;
+     transform:translate(-50%,-50%);
+    }
+  }
