--- a/src/components/home/card/card.css
+++ b/src/components/home/card/card.css
@@ -8,46 +8,45 @@
 	position: relative;
 }
 
-
-.card{
+.card {
 	position: relative;
 	width: 340px;
 	height: 340px;
-    margin:15px;
+	margin: 15px;
 	animation-name: defilement;
 	animation-duration: 400ms;
 	animation-fill-mode: forwards;
-	transition:400ms ease;
-	opacity:0;
+	transition: 400ms ease;
+	opacity: 0;
 }
 
-.card .card_bg{
-    position:absolute;
-    background-color: rgba(255, 96, 96,.2);
-    width:100%;
-    height:100%;
-    z-index:20;
-    pointer-events: none;
-    border-radius:15px;
+.card .card_bg {
+	position: absolute;
+	background-color: rgba(255, 96, 96, 0.2);
+	width: 100%;
+	height: 100%;
+	z-index: 20;
+	pointer-events: none;
+	border-radius: 15px;
 }
 
-.card img{
-    position:absolute;
-    width:100%;
-    height:100%;
-    z-index:30;
-    border-radius:15px;
-    filter:brightness(.8);
-	object-fit:cover;
+.card img {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	z-index: 30;
+	border-radius: 15px;
+	filter: brightness(0.8);
+	object-fit: cover;
 }
 
-.card img:hover{
-    z-index:10;
+.card img:hover {
+	z-index: 10;
 }
 
 .card .title {
 	position: absolute;
-    z-index:40;
+	z-index: 40;
 	bottom: 2%;
 	left: 6%;
 	max-width: 85%;
@@ -58,32 +57,30 @@
 
 @keyframes defilement {
 	0% {
-	  opacity: 0;
-	  transform: translateY(15%);
+		opacity: 0;
+		transform: translateY(15%);
 	}
 	100% {
-	  opacity: 1;
-	  transform: translateY(0%);
+		opacity: 1;
+		transform: translateY(0%);
 	}
-  }
-
-
-
-/*
-    animation-name: text_load_content;
-    animation-duration: 1s;
-    animation-fill-mode: forwards;
 }
 
-@keyframes text_load_content {
-    0% {
-   opacity:0;
-   transform:translate(-50%,0%);
-    }
- 
-    100% {
-     opacity:1;
-     transform:translate(-50%,-50%);
-    }
-  }
-  */
+/*Mobile*/
+@media screen and (max-width: 600px) {
+	body .cards {
+		padding: 0px;
+	}
+	body .card{
+		width: 62vw;
+		height: 50vw;
+	}
+	body .card .title { 
+		left:8vw;
+		font-size:5vw;
+	}
+}
+
+/*tablette*/
+@media screen and (max-width: 992px) {
+}
